<resources>
    <string name="app_name">FirebaseKotlin</string>

    <string name="signIn">Sign In</string>
    <string name="register">Register</string>
    <string name="dontHaveAnAccountRegisterNow">Don\'t have an account? Register now</string>
    <string name="AlreadyHaveAnAccountLogin">Already have an account? Login in</string>
    <string name="proceed_to_pay">Proceed to pay</string>
    <string name="subtotal">Subtotal</string>
    <string name="my_payment_history">My Payment history</string>
    <string name="your_payment_information">Your Payment Information</string>
    <string name="submit_details">Submit Details</string>
    <string name="without_the_payment_information_firebasekotlin_cannot_pay_you_for_your_work_and_all_the_payments_will_be_held_until_payment_information_is_uploaded_and_approved"> All the payments will be safely held until payment information is uploaded and approved.</string>
    <string name="adminLogin_loginBtn">Log in</string>
    <string name="adminLogin_title">Administrator Login</string>
    <string name="mainTitleSize">24dp</string>
    <string name="adminLogin_passw_helper">Password</string>
    <string name="adminLogin_uname_helper">Username</string>
    <string name="payment_mgt_title">Dashboard</string>
    <string name="adminDash_allPayments">All Payments</string>
    <string name="adminDash_revenue">revenue</string>
    <string name="adminDash_reviewsAndRatings">Reviews and Ratings</string>
    <string name="adminDash_paymentReports">Analytics and Reports</string>
    <string name="adminDash_lastMonth">Last Month Report</string>
    <string name="adminDash_thisMonthReport">This Month Report</string>
    <string name="adminDash_lifetimeRevenue">Lifetime Revenue</string>
    <string name="adminAllPayments_filterBtn">Filter results</string>
    <string name="adminAllPayments_sortBtn">Sort</string>
    <string name="adminDash_allPayments_paymentAmount">500$</string>
    <string name="adminDash_allPayments_paymentCardTitle">Payment at 14:33 on 13/01/2022</string>
    <string name="adminDash_allPayments_paymentBy">From User : #69r7b23yr23648</string>
    <string name="payment_info_title">Your Payment Information</string>
    <string name="textView_cardNum">Card number</string>
    <string name="adminLogin_getAccNotice">Contact administrators for an account</string>
    <string name="userPayInfo_cardNamePlaceholder">Name as it appears on your card</string>
    <string name="userPayInfo_cardNameTitle">Card Holder Name</string>
    <string name="userPayInfo_cardNickNamePlaceholder">(Optional)</string>
    <string name="userPayInfo_cardNickNameTitle">Card nickname</string>
    <string name="userPayInfo_cardNumTitle">Card Number</string>
    <string name="userPayInfo_cardNumPlaceholder">16 – 20 digit number..</string>
    <string name="userPayInfo_cardYearTitle">Year</string>
    <string name="userPayInfo_cardMonthTitle">Month</string>
    <string name="userPayInfo_cardCodeTitle">CCV/CVC code</string>
    <string name="userPayInfo_cardYearPlaceholder">YY</string>
    <string name="userPayInfo_cardMonthPlaceholder">MM</string>
    <string name="userPayInfo_cardCodePlaceholder">CCV/CVC</string>
    <string name="userPayInfo_saveInfoText">These details will not be stored in out systems. Instead this will be safely stored in your phone.</string>
    <string name="userPayInfo_submitBtn">Save Info</string>
    <string name="userPayInfo_cancelBtn">Clear info</string>
    <string name="paymentConfirmTitle">Payment Confirmation</string>
    <string name="userPayConf_amount">Rs. 2300.00</string>
    <string name="paymentConfirmText">Proceed to pay the above amount with your card ending with</string>
    <string name="userPayConf_cardNumSafe">**** 1234</string>
    <string name="userPayConf_cancelBtn">Cancel</string>
    <string name="userPayConf_pay">Pay</string>
    <string name="navigation_drawer_close">nav drawer close</string>
    <string name="navigation_drawer_open">nav drawer open</string>
</resources>